# palette-extractor

./: Cargo.toml
src/: main.rs
