[package]
name = "palette-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
anyhow = "1.0.75"
rand = "0.8.5"
clap = { version = "4.4.2", features = ["derive"] }
imageproc = "0.23.0"
